weork for this morning

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html>
 	<head>
-	<meta charset="utf-8">
-	<title>Chicago Tow Tracker</title>
+	   <meta charset="utf-8">
+	   <title>Chicago Tow Tracker</title>
+        <script type="text/javascript" src="JavaScript/jsonRequest.js"></script>
+        
 	</head>
+    <header></header>
 
 	<body>
 		<p>Chicago Tow Tracker</p>
+        <para id="text"></para>
+        
 	</body>
 </html>
