--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<p>Chicago Tow Tracker</p>
-        <para id="text"></para>
+        <div id="returnedCars"></div>
         
 	</body>
 </html>
