--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+      
   </head>
 
   <body>
@@ -44,7 +45,7 @@
 
       <div class="row mt centered">
   <div class="col-lg-6 col-lg-offset-3">
-          <form class="form-inline" role="form">
+          <form class="form-inline" role="form" id="plateStateForm">
             <div class="form-group">
               <input type="plate" class="form-control form-control-1" id="exampleInputEmail1" placeholder="Enter your plate number">
             </div>
@@ -105,14 +106,14 @@
         <option value="WY">Wyoming</option>
       </select>
             </div>
-            <button type="submit" class="btn btn-warning btn-lg">Search</button>
+            <button type="submit" id="plateStateId" class="btn btn-warning btn-lg">Search</button>
           </form>
 
         </div><!--/col-lg-6 -->
       </div>
       <div class="centered">
         <div class="col-lg-6 col-lg-offset-3">
-          <h3 style='color:white; margin:-20px 0 30px 0'>OR</h13>
+          <h3 style='color:white; margin:-20px 0 30px 0'>OR</h3>
         </div>
       </div>
       <div class="row mt centered">
@@ -235,7 +236,7 @@
         <option value="TRQ">Turquoise</option>
       </select>
             </div>
-            <button type="submit" class="btn btn-warning btn-lg">Search</button>
+            <button type="submit" onclick="makeColor()" class="btn btn-warning btn-lg">Search</button>
           </form>
         </div><!--/col-lg-6 -->
       </div><!-- /row -->
@@ -253,16 +254,10 @@
 		</div><!-- /row -->
 
 		<div class="row mt centered">
+            <div id="returnedCars"></div>
 
 		</div><!-- /row -->
 	</div><!-- /container -->
-
-
-
-
-
-
-
 
 
     <!-- Bootstrap core JavaScript
@@ -270,5 +265,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="JavaScript/jsonRequest.js" type="text/javascript"></script>
   </body>
 </html>
