--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
         <div class="col-lg-6 col-lg-offset-3">
-          <form class="form-inline" role="form">
+          <form class="form-inline" role="form" id="colorMakeForm">
             <div class="form-group">
         <select class="form-control form-control-1" id="make" name="make">
         <option value="">Select make</option>
@@ -236,7 +236,7 @@
         <option value="TRQ">Turquoise</option>
       </select>
             </div>
-            <button type="submit" onclick="makeColor()" class="btn btn-warning btn-lg">Search</button>
+            <button type="submit" id="makeColor" class="btn btn-warning btn-lg">Search</button>
           </form>
         </div><!--/col-lg-6 -->
       </div><!-- /row -->
